objects/Customer_Support_Survey__c.object
<CustomObject>
    <description>Captures Agent Satisfaction Survey from Survey Gizmo. Associates to the Case Contact, Case and Account.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account that the case/survey is related to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>If you would like to provide any additional comments regarding your experience, please use comment field below:</description>
        <label>Additional Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSR_Dissatisfaction_Reason__c</fullName>
        <description>You stated that you were dissatisfied with the TE Customer Care Representative that assisted you. Please let us know where you think we can improve:</description>
        <inlineHelpText>You stated that you were dissatisfied with the TE Customer Care Representative that assisted you. Please let us know where you think we can improve:</inlineHelpText>
        <label>CSR Dissatisfaction Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Was not professional and courteous.</fullName>
                </value>
                <value>
                    <fullName>Did not provide prompt resolution.</fullName>
                </value>
                <value>
                    <fullName>Did not demonstrate knowledge of my business and requirements.</fullName>
                </value>
                <value>
                    <fullName>Did not demonstrate knowledge of TE products and services.</fullName>
                </value>
                <value>
                    <fullName>Other Reason (specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR_Satisfaction_Level__c</fullName>
        <description>How satisfied were you with the TE Customer Care Representative who assisted you?</description>
        <label>CSR Satisfaction Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <description>Case Owner for this survey</description>
        <label>CSR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case that this survey is related to.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Category__c</fullName>
        <description>Task sent to Text-Mining team to Categorize Comments into these selections for reporting purposes</description>
        <label>Comment Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Lead Time</fullName>
                </value>
                <value>
                    <fullName>Response Time</fullName>
                </value>
                <value>
                    <fullName>Customer Care/TAC Engg</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Sentiment_Type__c</fullName>
        <description>Task created for Text-Mining team to categorize the Open Text Comments into these categories.</description>
        <label>Comment Sentiment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>If you would like to provide any additional comments regarding your experience, please use the comment field below.</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Effort_Required__c</fullName>
        <description>How much effort did you personally have to put forth in order to resolve your request?</description>
        <label>Customer Effort Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low Effort</fullName>
                </value>
                <value>
                    <fullName>Low Effort</fullName>
                </value>
                <value>
                    <fullName>Moderate Effort</fullName>
                </value>
                <value>
                    <fullName>High Effort</fullName>
                </value>
                <value>
                    <fullName>Very High Effort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Mgr_Contact__c</fullName>
        <description>Survey Gizmo Survey: A Customer Care Manager may reach out to you. Please indicate if you do not want to be contacted.</description>
        <inlineHelpText>Survey Gizmo Survey: Can a Customer Care Manager reach out to you?</inlineHelpText>
        <label>Can a Customer Care Manager Contact?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Submitted_legacy__c</fullName>
        <description>This is for the legacy survey data upload, only pertains to records from 10/2012 and prior</description>
        <label>Date Submitted_legacy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dissatisfied_Summary__c</fullName>
        <description>For use of TAC Manager to summarize any dissatisfied customer ratings, used in reporting</description>
        <label>Dissatisfied Summary</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Customer Error</fullName>
                </value>
                <value>
                    <fullName>Other TE Organization</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effort_Score__c</fullName>
        <description>Effort Score captured from SG</description>
        <inlineHelpText>On a scale of 1 to 5(1 being lowest and 5 being highest), How much effort did you personally have to put forth to handle your request</inlineHelpText>
        <label>Effort Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Time_Contacted_Check__c</fullName>
        <description>Need the to create a report Requested by Nauman where we need to calculate first contact resolution percentage.</description>
        <formula>if(Times_contacted_to_resolve_Issue_Formula__c ==1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Time Contacted Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Dissatisfaction_Reason__c</fullName>
        <description>You stated that you were dissatisfied with the interaction. Was it because:</description>
        <inlineHelpText>You stated that you were dissatisfied with the interaction. Was it because:</inlineHelpText>
        <label>Interaction Dissatisfaction Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No resolution to my pre-sales question</fullName>
                </value>
                <value>
                    <fullName>No resolution to my post-sale question</fullName>
                </value>
                <value>
                    <fullName>My question wasn&apos;t answered promptly</fullName>
                </value>
                <value>
                    <fullName>My question wasn&apos;t completely answered</fullName>
                </value>
                <value>
                    <fullName>Other Reason (specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Satisfaction_Level__c</fullName>
        <description>How Satisfied were you with this Interaction?</description>
        <label>Interaction Satisfaction Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <label>Issue Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mgr_Supv_Comments__c</fullName>
        <label>Mgr/Supv Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Times_Contacted_Resolve_Issue__c</fullName>
        <description>How many times did you have to contact TE to get your inquiry resolved?</description>
        <inlineHelpText>How many times did you have to contact TE to get your inquiry resolved?</inlineHelpText>
        <label>No. of times contacted to resolve Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 time</fullName>
                </value>
                <value>
                    <fullName>2 times</fullName>
                </value>
                <value>
                    <fullName>3 times or more</fullName>
                </value>
                <value>
                    <fullName>Not Ressolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_legacy__c</fullName>
        <description>this is for legacy survey data only pertains to records dated 10/2012 and earlier</description>
        <label>Reason Code_legacy</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Interaction_legacy__c</fullName>
        <description>this is for legacy survey data only pertains to records dated 10/2012 and earlier</description>
        <label>SAP Interaction &amp;_legacy</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfied_with_Resolution_Timeframe__c</fullName>
        <description>Was this interaction resolved within an acceptable amount of time?</description>
        <label>Satisfied with Resolution Timeframe?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Age__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Fiscal_Month_legacy__c</fullName>
        <description>this is for legacy survey data only pertains to records dated 10/2012 and earlier</description>
        <label>TE Fiscal Month_legacy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_contacted_to_resolve_Issue_Formula__c</fullName>
        <formula>IF(ISPICKVAL( No_of_Times_Contacted_Resolve_Issue__c , &apos;1 time&apos;) , 1, IF(ISPICKVAL( No_of_Times_Contacted_Resolve_Issue__c , &apos;2 times&apos;) , 2, IF(ISPICKVAL( No_of_Times_Contacted_Resolve_Issue__c , &apos;3 times or more&apos;) ,3,IF(ISPICKVAL( No_of_Times_Contacted_Resolve_Issue__c , &apos;Not Resolved&apos;) , 4,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Times contacted to resolve Issue-Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_an_acceptable_amount_of_time__c</fullName>
        <description>You stated that your interaction was not answered within an acceptable amount of time. What do you view as acceptable?</description>
        <inlineHelpText>You stated that your interaction was not answered within an acceptable amount of time. What do you view as acceptable?</inlineHelpText>
        <label>What is an acceptable amount of time?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within 1 hour</fullName>
                </value>
                <value>
                    <fullName>Within 4 hours</fullName>
                </value>
                <value>
                    <fullName>Within one business day</fullName>
                </value>
                <value>
                    <fullName>Within two business days</fullName>
                </value>
                <value>
                    <fullName>Other Reason (specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Effort_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Support Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <recordTypes>
        <fullName>Customer_Care_Survey</fullName>
        <active>true</active>
        <description>Captures SurveyGizmo data</description>
        <label>Customer Care Survey</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>